# fireblink

./: Cargo.toml
.github/workflows/: rust_ci.yml
firmware/: Cargo.toml
patterns/: COLLIDING-PARTICLES.md  Cargo.toml  IDEAS.md  MIC-IDEAS.md
patterns/src/: audio.rs  controls.rs  lib.rs  life.rs  palette.rs  point.rs  scene.rs  seeds.rs
